# ComputationalIntelligenceOptimization

./: .gitignore  .gitmodules  CHANGELOG.md  GOALS.md  LICENSE  README.md  TODO  TODO.md  pyproject.toml  requirements.txt  setup.py
cifo/: __init__.py  constants.py  loader.py  main.py
cifo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cifo/cifo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cifo/classes/: __init__.py  drafts.py  player.py  solution.py  solver.py  utils.py
cifo/drafts/: test_jitclass.py
cifo/utils/: _classes.py  _functions.py  _preprocess.py  fetch_python_modules.py  sys_modules_20250408_143857.txt
data/: player_data (Copy).xlsx  player_data.xlsx
notebooks/: CIFO_notebook.ipynb  Drafts_notebook.ipynb  Exploring Poison.ipynb
rubix/: README.md  __init__.py  constants.py  exceptions.py  loader.py  main.py  processor.py  run.py
rubix.configs/: README.md  annealing_config.json  baseline_config.json  genetic_config.json  hill_climber_config.json  random_search_config.json  rubix_evolve_config.json  rubix_search_config.json  tmpjiimn6ke.json  tmplppng_2p.json  tmpy668_ode.json
rubix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rubix/classes/: __init__.py  cube.py  dataset.py  solution.py  solver.py
rubix/drafts/: crossover.py
rubix/functions/: crossovers.py  operators.py  selectors.py  solver_strategies.py
src/: constants.py
src/cifo.egg-info/: PKG-INFO  SOURCES.txt
src/classes/: player.py
src/utils/: __init__.py  data_utils.py  ingestion_utils.py  plotting_utils.py  statistic_util.py
tests/: _boilercode.py  test_cube.py  test_dataset.py  test_loader.py  test_main.py  test_processor.py  test_solver.py
