[project]
name = "RuBiX"
version = "0.1.0-alpha.1"
description = "A Numba Optimized Genetic Algorithm Framework for Combinatorial Problems"
authors = [
    {
        name = "Group AI", 
        email = "r2015469@novaims.unl.com", 
        affiliation = "MsC in Data Science @NovaIMS 2024/2025"
    }
]
license = "MIT"
readme = "README.md"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "openpyxl",
    "matplotlib",
    "ipykernel",
    "seaborn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rubix"]

[project.scripts]
run = "rubix.main:main"